src/test/deca/syntax/parser/invalid/main_block_braces_not_closed.deca
// Parser test, missing '}'

{
    int x = 5;